[INFER] Don't keep using garbage IC after a native triggers recompilation, bug 617589.